--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,12 @@ general:
     only:
       - master
 
+dependencies:
+   post:
+      - wget https://selenium-release.storage.googleapis.com/3.3/selenium-server-standalone-3.3.1.jar
+      - java -jar selenium-server-standalone-3.3.1.jar:
+            background: true
+
 ## Customize test commands
 test:
   post:
