--- a/circle.yml
+++ b/circle.yml
@@ -15,10 +15,12 @@ general:
       - master
 
 dependencies:
-   post:
-      - wget https://selenium-release.storage.googleapis.com/3.3/selenium-server-standalone-3.3.1.jar
-      - java -jar selenium-server-standalone-3.3.1.jar:
-            background: true
+  override: 
+    - mvn dependency:resolve
+  post:
+    - wget https://selenium-release.storage.googleapis.com/3.3/selenium-server-standalone-3.3.1.jar
+    - java -jar selenium-server-standalone-3.3.1.jar:
+        background: true
 
 ## Customize test commands
 test:
